<resources>
    <string name="app_name">Go&amp;Enjoy</string>
    <string name="title_activity_lugares">LugaresActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

...
    <string name="menu_monumentos">Monumentos</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="frase1">Pulsa en la cerveza para comenzar</string>
    <string name="frase2">¿Aun no tienes un perfil?</string>
    <string name="crear">CREAR</string>

    <string name="crearPerfil">CREAR PERFIL</string>
    <string name="NOMBREUSUARIO">NOMBRE DE USUARIO</string>
    <string name="EMAIL">CORREO ELECTRONICO</string>
    <string name="menu_fav">Favoritos</string>
    <string name="menu_deseos">Me gustaría visitar</string>
...
