<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="es.unex.goenjoy.fragment.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/nav_listaLugaresfav"
        android:name="es.unex.goenjoy.fragment.LugaresFavoritoFragment"
        android:label="@string/menu_fav"
        tools:layout="@layout/fragment_lugares" />
    <fragment
        android:id="@+id/nav_listaLugaresdeseo"
        android:name="es.unex.goenjoy.fragment.LugaresDeseoFragment"
        android:label="@string/menu_deseos"
        tools:layout="@layout/fragment_lugares" />
    <fragment
        android:id="@+id/nav_rutas"
        android:name="es.unex.goenjoy.fragment.RutaFragment"
        android:label="@string/menu_ruta"
        tools:layout="@layout/fragment_ruta" />
    <fragment
        android:id="@+id/nav_museo"
        android:name="es.unex.goenjoy.fragment.MuseosFragment"
        android:label="Museos"
        tools:layout="@layout/fragment_museos" />
    <fragment
        android:id="@+id/nav_buscar"
        android:name="es.unex.goenjoy.fragment.BuscarFragment"
        android:label="Buscar"
        tools:layout="@layout/fragment_buscar"/>
    <fragment
        android:id="@+id/nav_perfil"
        android:name="es.unex.goenjoy.fragment.EditarPerfilFragment"
        android:label="Mi perfil"
        tools:layout="@layout/fragment_editar_perfil" />

</navigation>